--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro&display=swap');
 
+
 header nav .logo {
     font-family: "Source Serif Pro", serif;
     font-size: 4rem;
@@ -98,32 +99,77 @@ header .menu a:hover {
     }
 
 h2 {
-
-    background-size: cover;
-    background-position: left;
+    
     font-size: 3rem;
     font-family: 'Source Serif Pro', serif;
     font-weight: bold;
     text-transform: uppercase;
     color: black;
     display: grid;
+    
 }
 
-.bicycle-types article img {
-    width: 60%;
-    display: grid;
-    grid-template-rows: max-content; 
+
+.slick-slider{
+	min-width: 170%;
 }
 
-.bicycle-types article img {
-border: 1px black;
+.slick-list {
+	overflow: hidden;
+}
+
+.slick-track{
+	display: flex;
+	align-items: center;
+    justify-content: space-between;
+}
+
+
+
+
+.bicycle-types {
+	position: relative;
+	padding: 0px 60px;
+}
+
+
+
+.bicycle-types .slick-arrow{
+	position: relative;
+	top: 50%;
+	margin: -30px 0px 0px 0px;
+	z-index: 10;
+	font-size: 0;
+	width: 30px;
+	height: 30px;
+}
+.bicycle-types .slick-arrow.slick-prev{
+	left: 0;
+	background: url('../img/sl-arrow_l.svg') 0 0 / 100% no-repeat;
+}
+.bicycle-types .slick-arrow.slick-next{
+	right: 0;
+	background: url('../img/sl-arrow_r.svg') 0 0 / 100% no-repeat;
+}
+.bicycle-types .slick-arrow.slick-disabled{
+	opacity: 0.2;
+}
+
+
+
+.bicycle-types .slick-dots li.slick-active button{
+	background-color: transparent;
+	border: 1px solid black;
 }
 
 .bicycle-types {
-    display: flex;
-    justify-content: space-around;
-
+	padding: 0px 15px;
 }
+.bicycle-types img{
+	max-width: 100%;
+    
+}
+
 
 tr {
   background-image: url(../img/bike2.jpg);  
@@ -163,9 +209,9 @@ tr {
 .about-us {
   background-image: url(../img/collage.jpg);
   font-size: 3.5em;
-  width: 100%;
+  min-width: 100%;
   min-height: 1240px;
-  color: black;
+  color:yellow;
   margin: auto;
 } 
 
@@ -190,9 +236,9 @@ tr {
 
 footer {
     background-image: url(../img/night-city.jpg);
-    font-size: 2em;
+    font-size: 1em;
     width: 100%;
-    min-height: 800px;
+    min-height: 500px;
     color: white;
     margin: auto;
 
@@ -205,7 +251,7 @@ footer form label {
     padding: 10px;
     width: 30%;
     text-align: justify;
-    justify-content: flex-start;
+    justify-content: first baseline;
     
 }
 
