--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,7 @@ body{
     margin: auto;
 }
 
+
 header nav .logo {
     font-family: "Source Serif Pro", serif;
     font-size: 4rem;
@@ -25,6 +26,7 @@ header nav .menu {
     max-width: 100%;
 }
 
+
 header nav {
     background-image: url(../img/night-city.jpg);
 }
@@ -39,6 +41,34 @@ header .banner {
     justify-content: center;
     flex-direction: column;
 }
+
+.social {display: inline-block;}
+.social a {
+	display: block;
+	width: 48px;
+	height: 48px;
+	margin: 0 10px 10px 0;
+	text-align: center;
+	color: #000;
+	background: #fff;
+	border: 1px solid #ccc;
+	border-radius: 24px;
+	box-shadow: 0 2px 4px rgba(0,0,0,0.15), inset 0 0 50px rgba(0,0,0,0.1);
+}
+.social a:hover {color: #fff;}
+.social svg {
+	margin-top: 7px;
+	width: 32px;
+	height: 32px;
+}
+
+.skype a:hover {background: #00aff0;}
+.viber a:hover {background: #7b519d;}
+.youtube a:hover {background: #c4302b;}
+.facebook a:hover {background: #3b5998;}
+.instagram a:hover {background: violet;}
+
+
 
 header .banner h1 {
     background-size: cover;
@@ -108,6 +138,9 @@ h2 {
     text-transform: uppercase;
     color: black;
     display: grid;
+    justify-content: space-between;
+    margin: auto;
+    font-style: italic;
     
 }
 
@@ -133,7 +166,7 @@ h2 {
 .bicycle-types .slick-arrow{
 	position: relative;
 	top: 50%;
-	margin: -30px 0px 0px 0px;
+	margin: -30px 0px 0px 90px;
 	z-index: 10;
 	font-size: 0;
 	width: 30px;
@@ -195,15 +228,14 @@ tr {
     font-weight: bold;
     margin: auto;
     color: yellow;
+    padding: auto;
 }
 
 .about-us {
   background-image: url(../img/collage.jpg);
   font-size: 2.5em;
   max-width: 100%;
-  min-height: 790px;
-  background-position: center;
-  background-size: contain;
+  min-height: 1240px;
   color:black;
   font-style: italic;
 
@@ -232,8 +264,11 @@ footer {
     background-image: url(../img/night-city.jpg);
     font-size: 1em;
     max-width: 100%;
+    height: 500px;
     color: white;
     margin: auto;
+    padding: 15px;
+
 
 }
 
@@ -245,5 +280,17 @@ footer form label {
     width: 30%;
     text-align: justify;
     justify-content: flex-start;
+
+}
+
+.map-responsive {
+    overflow: hidden;
+    position: relative;
+    height: 0;
+    left: 50%;
+    bottom:  360px;
+    height: 75%;
+    width: 45%;
+}
 
 }
